adding coffee details page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Joe's Coffee</title>
+		<link rel="stylesheet" type="text/css" href="styles/layout.css" />
 	</head>
 	<body>
 		<header>
@@ -11,6 +12,7 @@
 					<img src="images/logo.png" />
 				</a>
 				<span id="headername">Joe's Cofee Store</span>
+				
 			</div>			
 		</header>
 
