--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/layout.css" />
 	</head>
 	<body>
-		<header>
+		<header id="mainheader">
 			<div>
 				<a class="headerlogo" href="index.html">
 					<img src="images/logo.png" />
@@ -14,6 +14,15 @@
 				<span id="headername">Joe's Cofee Store</span>
 				
 			</div>			
+
+			<nav class="backgroundgradient">
+				<ul>
+					<li>hi</li>
+					<li>hey</li>
+					<li>sup</li>
+				</ul>
+			</nav>
+
 		</header>
 
 		<section id="welcometext">
