--- a/Week 2/WebApplication1/web/index.html
+++ b/Week 2/WebApplication1/web/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<header class="container-fluid"> 
-		<h2>Registeration Form</h2>
+		<h2>Registration Form</h2>
 	</header><br>
 	<div class="container-fluid">
 		<div class="row">
-			<form role="form" class="col-md-5" id="signUpForm">
+			<form action="home" method="POST" role="form" class="col-md-5" id="signUpForm">
 			    <div class="form-group">
 			      <label for="name">Name:</label>
 			      <input type="text" class="form-control" id="name" name="name" maxlength="30" required>
